<resources>
	<string name="app_name">aPS3e</string>
	<string name="open_source_licenses">Open Source Licenses</string>
	<string name="buy_premium">Buy aPS3e Premium</string>
	<string name="device_unsupport_vulkan_msg">Your device does not support Vulkan and cannot meet the minimum requirements to run this application, please exit.</string>
	<string name="use_cores_ppu">Use Cores(PPU)</string>
	<string name="use_cores_spu">Use Cores(SPU)</string>
	<string name="use_cores_rsx">Use Cores(RSX)</string>
	<string name="emulator_settings_core_thread_affinity_mask">Thread Affinity Mask</string>
	<string name="create_shortcut">Create Shortcut</string>
	<string name="loading">Loading...</string>
	<string name="resolution_not_support">Resolution or aspect ratio is not supported\nThe current game only supports:\n%s\n\nPlease modify with the following settings:\n%s\n%s\n</string>
	<string name="show_game_info">Show Game Info</string>
	<string name="quick_start_page">Quick Start Page</string>
	<string name="prev_step">Prev Step</string>
	<string name="next_step">Next Step</string>
	<string name="finish">Finish</string>
	<string name="welcome">Welcome</string>
	<string name="welcome_content">Welcome to %s!</string>
	<string name="welcome_content2">With just a few simple steps, you re ready to start playing, click on " %s " to get started.</string>
	<string name="install_ps3_firmware_hiht_content">To play the game, you must install the PS3 firmware (PS3UPDAT.PUP). Please select the firmware file.</string>
	<string name="ps3_firmware_installed">Firmware Installed</string>
	<string name="select_ps3_firmware">Select Firmware(PS3UPDAT.PUP)</string>
	<string name="firmware_not_install">firmware not install</string>
	<string name="select_ps3_iso_dir_hiht_content">Please specify the PS3 ISO directory, the APP will automatically scan to retrieve valid games, you can also skip this step and install the .pkg file directly.</string>
	<string name="ps3_iso_dir_is_set">PS3 ISO directory to set</string>
	<string name="font_select_hiht_content">Please select a font file (*.ttf, *.ttc, *.otf) to install, or you can use a font from the PS3 firmware (words may be missing).</string>
	<string name="custom_font_path_prefix">Font Path: </string>
	<string name="select_gpu_driver_hiht_content">Please select a GPU driver, you can also skip this step (the game may run with errors).</string>
	<string name="custom_gpu_driver_path_prefix">GPU Driver Path: </string>
	<string name="modify_config_hiht_content">The emulator will automatically select the most suitable configuration, but some configurations may cause issues on your device. You can modify them later in the settings.</string>
	<string name="msg_processing">Processing...</string>
	<string name="msg_failed">Failed!</string>
	<string name="emulator_settings_video_vulkan_debug">Debug</string>
	<string name="emulator_settings_miscellaneous_memory_debug_overlay">Memory Debug overlay</string>
	<string name="vibrator_duration">Virbrator Duration</string>
	<string name="enable_vibrator">Enable Vibrator</string>
	<string name="dynamic_joystick">Dynamic Joystick</string>
	<string name="disable">Disable</string>
	<string name="disable_virtual_keyboard">Disable the virtual keyboard</string>
	<string name="joystick">Joystick</string>
	<string name="dpad">Dpad</string>
	<string name="button">Button</string>
	<string name="lr">LR</string>
	<string name="start_select">Start/Select</string>
	<string name="enable_log">Enable Log</string>
	<string name="use_global_config">Use Global Config</string>
	<string name="edit_custom_config">Edit Custom Config</string>
	<string name="clear">Clear</string>
	<string name="press_a_key">Press any key to continue...</string>
	<string name="game_list_loading">The game list is loading...</string>
	<string name="undecrypted_game">Running undecrypted games is not supported at this time</string>
	<string name="delete_game_data">Delete Game Data</string>
	<string name="delete_hdd0_install_data">Delete hdd0 Install Data</string>
	<string name="delete_game_and_data">Delete Game and Data</string>
	<string name="delete_shaders_cache">Delete Shaders Cache</string>
	<string name="set_iso_dir">Set (*.iso) Directory</string>
	<string name="device_info">Device Info</string>
	<string name="reset_as_default">Reset as Default</string>
	<string name="save_and_quit">Save &amp; Quit</string>
	<string name="scale_rate">Scale Rate</string>
	<string name="open_file_manager">Open File Manager</string>
	<string name="installing_firmware">Installing Firmware...</string>
	<string name="refresh_list">Refresh List</string>
	<string name="select_game">Select Game</string>
	<string name="install_firmware">Install Firmware</string>
	<string name="install_game">Install EDAT/RAP/PKG</string>
	<string name="installing_game">Installing Game...</string>
	<string name="about">About</string>
	<string name="quit">Quit</string>
	<string name="update_log">Update Log</string>
	<string name="empty_game_list">The list of games is empty, please add games by installing pkg or setting the *.iso directory</string>
	<string name="delete">Delete</string>
	<string name="settings">Settings</string>
	<string name="gratitude">Gratitude</string>
	<string name="gratitude_content">Thanks Ruban for all the ICONS\n\n
		Thanks to SRC267 (Sting) for managing reddit/discord\n\n
		Thanks to 妖妖 for test\n\n
		Thanks to 再见某人 for donating GPD XP, which has been a great help in the testing process.\n\n
		Thanks to 再见某人 for donating the development equipment, which has been instrumental in advancing the project.\n\n
		Thanks to the following people who provided financial support for this project (Initial stage,sort by date):\n\n</string>
	<string name="gratitude_content2">
		Based on the RPCS3 transplantation optimization, thanks to all the participants of the RPCS3 project\n\n
Translation qwen3
	</string>
	<string name="key_mappers">Key Mappers</string>
	<string name="virtual_pad_edit">VirtualPadEdit</string>
	<string name="left">left</string>
	<string name="up">up</string>
	<string name="right">right</string>
	<string name="down">down</string>
	<string name="square">square</string>
	<string name="cross">cross</string>
	<string name="circle">circle</string>
	<string name="triangle">triangle</string>
	<string name="l1">L1</string>
	<string name="l2">L2</string>
	<string name="l3">L3</string>
	<string name="r1">R1</string>
	<string name="r2">R2</string>
	<string name="r3">R3</string>
	<string name="start">start</string>
	<string name="select">select</string>
	<string name="ps">PS</string>
	<string name="emulator_settings_video_vulkan_custom_driver_library_path_dialog_title">Select a Custom Driver</string>
	<string name="emulator_settings_video_vulkan_custom_driver_library_path_dialog_add_hint">Add Custom Driver(*.zip, *.so)</string>
	<string name="emulator_settings_miscellaneous_custom_font_file_path_dialog_title">Select a Custom Font</string>
	<string name="emulator_settings_miscellaneous_custom_font_file_path_dialog_add_hint">Add Custom Font(*.ttf, *.ttc, *.otf)</string>
	<string name="emulator_settings_core">Core</string>
	<string name="emulator_settings_core_ppu_decoder">PPU Decoder</string>
	<string-array name="core_ppu_decoder_entries">
		<item>Interpreter (static)</item>
		<item>Recompiler (LLVM)</item>
	</string-array>
	<string name="emulator_settings_core_ppu_threads">PPU Threads</string>
	<string name="emulator_settings_core_ppu_debug">PPU Debug</string>
	<string name="emulator_settings_core_ppu_calling_history">PPU Calling History</string>
	<string name="emulator_settings_core_save_llvm_logs">Save LLVM logs</string>
	<string name="emulator_settings_core_use_llvm_cpu">Use LLVM CPU</string>
	<string name="emulator_settings_core_max_llvm_compile_threads">Max LLVM Compile Threads</string>
	<string name="emulator_settings_core_ppu_llvm_greedy_mode">PPU LLVM Greedy Mode</string>
	<string name="emulator_settings_core_llvm_precompilation">LLVM Precompilation</string>
	<string name="emulator_settings_core_thread_scheduler_mode">Thread Scheduler Mode</string>
	<string-array name="core_thread_scheduler_mode_entries">
		<item>Operating System</item>
		<item>Affinity</item>
	</string-array>
	<string name="emulator_settings_core_set_daz_and_ftz">Set DAZ and FTZ</string>
	<string name="emulator_settings_core_spu_decoder">SPU Decoder</string>
	<string-array name="core_spu_decoder_entries">
		<item>Interpreter (static)</item>
		<item>Interpreter (dynamic)</item>
		<item>Recompiler (ASMJIT)</item>
		<item>Recompiler (LLVM)</item>
	</string-array>
	<string name="emulator_settings_core_spu_reservation_busy_waiting_percentage">SPU Reservation Busy Waiting Percentage</string>
	<string name="emulator_settings_core_spu_getllar_busy_waiting_percentage">SPU GETLLAR Busy Waiting Percentage</string>
	<string name="emulator_settings_core_disable_spu_getllar_spin_optimization">Disable SPU GETLLAR Spin Optimization</string>
	<string name="emulator_settings_core_spu_debug">SPU Debug</string>
	<string name="emulator_settings_core_mfc_debug">MFC Debug</string>
	<string name="emulator_settings_core_preferred_spu_threads">Preferred SPU Threads</string>
	<string name="emulator_settings_core_spu_delay_penalty">SPU delay penalty</string>
	<string name="emulator_settings_core_spu_loop_detection">SPU loop detection</string>
	<string name="emulator_settings_core_max_spurs_threads">Max SPURS Threads</string>
	<string name="emulator_settings_core_spu_block_size">SPU Block Size</string>
	<string-array name="core_spu_block_size_entries">
		<item>Safe</item>
		<item>Mega</item>
		<item>Giga</item>
	</string-array>
	<string name="emulator_settings_core_accurate_spu_dma">Accurate SPU DMA</string>
	<string name="emulator_settings_core_accurate_spu_reservations">Accurate SPU Reservations</string>
	<string name="emulator_settings_core_accurate_cache_line_stores">Accurate Cache Line Stores</string>
	<string name="emulator_settings_core_accurate_rsx_reservation_access">Accurate RSX reservation access</string>
	<string name="emulator_settings_core_rsx_fifo_accuracy">RSX FIFO Accuracy</string>
	<string-array name="core_rsx_fifo_accuracy_entries">
		<item>Fast</item>
		<item>Atomic</item>
		<item>Ordered &amp; Atomic</item>
		<item>PS3</item>
	</string-array>
	<string name="emulator_settings_core_spu_verification">SPU Verification</string>
	<string name="emulator_settings_core_spu_cache">SPU Cache</string>
	<string name="emulator_settings_core_spu_profiler">SPU Profiler</string>
	<string name="emulator_settings_core_mfc_commands_shuffling_limit">MFC Commands Shuffling Limit</string>
	<string name="emulator_settings_core_mfc_commands_timeout">MFC Commands Timeout</string>
	<string name="emulator_settings_core_mfc_commands_shuffling_in_steps">MFC Commands Shuffling In Steps</string>
	<string name="emulator_settings_core_enable_tsx">Enable TSX</string>
	<string-array name="core_enable_tsx_entries">
		<item>Disabled</item>
		<item>Enabled</item>
		<item>Forced</item>
	</string-array>
	<string name="emulator_settings_core_xfloat_accuracy">XFloat Accuracy</string>
	<string-array name="core_xfloat_accuracy_entries">
		<item>Accurate</item>
		<item>Approximate</item>
		<item>Relaxed</item>
		<item>Inaccurate</item>
	</string-array>
	<string name="emulator_settings_core_accurate_ppu_128byte_reservation_op_max_length">Accurate PPU 128-byte Reservation Op Max Length</string>
	<string name="emulator_settings_core_stub_ppu_traps">Stub PPU Traps</string>
	<string name="emulator_settings_core_precise_spu_verification">Precise SPU Verification</string>
	<string name="emulator_settings_core_ppu_llvm_java_mode_handling">PPU LLVM Java Mode Handling</string>
	<string name="emulator_settings_core_use_accurate_dfma">Use Accurate DFMA</string>
	<string name="emulator_settings_core_ppu_set_saturation_bit">PPU Set Saturation Bit</string>
	<string name="emulator_settings_core_ppu_accurate_nonjava_mode">PPU Accurate Non-Java Mode</string>
</resources>